--- a/src/Pages/Aboutus/Aboutus.css
+++ b/src/Pages/Aboutus/Aboutus.css
@@ -15,13 +15,16 @@
     max-height: 500px;
     max-width: 400px;
     overflow: hidden;
+    background-image: url(./../../../public/Images/me.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
-.imgAboutusMe {
+/* .imgAboutusMe {
     width: 100%;
     height: 100%;
     max-width: 420px;
-}
+} */
 
 .divLeftAboutusPage {
     background-color: rgba(244, 246, 255, 0.753);
