--- a/src/Pages/Basket/Basket.css
+++ b/src/Pages/Basket/Basket.css
@@ -243,11 +243,12 @@
 .waveHeaderInBasket{
     width: 100%;
     position: absolute;
-    top: -42px;
+    top: -100px;
     left: -10%;
-    z-index: -1;
+    z-index: -2;
     max-height: 210px;
     transform: rotate(-3deg);
+    opacity: 70%;
 }
 .inputBTNPayInBasket{
     width: 100%;
