--- a/src/Pages/Category/Category.css
+++ b/src/Pages/Category/Category.css
@@ -37,17 +37,23 @@
 
 .spanBoxCatTittle {
     margin-top: 13px;
-    color: rgb(177, 104, 44);
+    color: rgb(218, 74, 8);
     font-weight: 900;
     z-index: 2;
     position: absolute;
     opacity: 0;
-    top: 300px;
+    top: 350px;
     font-size: 2px;
+    background-color: rgba(0, 0, 0, 0.486);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .divBoxCategory:hover .spanBoxCatTittle{
     opacity: 1;
-    top: 20px;
+    top: -13px;
     font-size: 37px;
     transition: all .6s;
 }
